# pycdio

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  ChangeLog.1  MANIFEST.in  Makefile  Makefile.am  NEWS  NEWS.md  PKG-INFO  README  README.rst  README.txt  SECURITY.md  THANKS  VERSION.py  __init__.py  __pkginfo__.py  autogen.sh  cdio.py  cdio.py.in  configure.ac  get-cygwin-python-libs  git2authors.txt  include-path.py  iso9660.py  setup.cfg  setup.py  site-packages-path.py
.github/: FUNDING.yml
admin-tools/: check-versions.sh  how-to-make-a-release.md  make-dist.sh  pyenv-versions  unixccompiler.py
example/: .cvsignore  .gitignore  Makefile  README  audio.py.in  cd-read.py  cd-read.py.in  cdchange.py.in  cdtext.py  device.py  device.py.in  drives.py  drives.py.in  eject.py  eject.py.in  iso1.py  iso1.py.in  iso2.py  iso2.py.in  iso3.py  iso3.py.in  tracks.py  tracks.py.in
swig/: .gitignore  Makefile  audio.swg  cdtext.swg  cdtext_new.swg  cdtext_old.swg  compat.swg  device.swg  device_const.swg  disc.swg  pycdio.i  pycdio.swg  pyiso9660.i  pyiso9660.swg  read.swg  track.swg  types.swg
test/: .cvsignore  Makefile  cdda.toc  cdiotest.py.in  isocopy.py  isocopy.py.in  isoread.py.in  isotest.py.in  test-cdio.py  test-cdtext.py  test-iso.py  test-isocopy.py
